Fixed layout issues with ie7

--- a/style/annotate.css
+++ b/style/annotate.css
@@ -143,7 +143,15 @@
     margin-right: 0;
 }
 
+#saveoptions form {
+    display: inline;
+}
+
 #choosetoolgroup {
-    display: inline-block;
+    display: inline;
     margin-left: 5px;
+}
+
+#toolbar-line2 select {
+    display: inline;
 }
